--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ ul.nav li a {
     text-decoration:none;
     background: none;
     border: none;
-    color: #fff;
+    color: #bcbcbc;
     font-size:16px;
 }
 
