--- a/style.css
+++ b/style.css
@@ -1,204 +1,170 @@
-/*
-font-family: 'PT Sans', sans-serif;
-font-family: 'PT Sans Narrow', sans-serif;
-font-family: 'PT Serif', serif;
-*/
-
-body {
-    margin: 0;
-    padding: 0;
+.cspio body {
+  background: transparent;
 }
 
-* {
-    font-family: 'PT Serif', serif;
+.cspio body,
+.cspio body p {
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5em;
+  color: #ffffff;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'PT Sans Narrow', sans-serif;
+::-webkit-input-placeholder {
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 400;
 }
 
-a {
-    font-family: 'PT Sans', sans-serif;
+::-moz-placeholder {
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 400;
 }
 
-.bg {
-    position:fixed;
-    width:100%;
-    height:500px;
-    z-index:-100;
+:-ms-input-placeholder {
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 400;
 }
 
-.bg > div {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background-repeat:no-repeat;
-    background-size:cover;
-    background-position:center center;
+:-moz-placeholder {
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 400;
 }
 
-.bg-normal {
-    z-index:10;
-    background-image:url('/background.jpg');
+#cspio-socialprofiles a {
+  color: #ffffff;
 }
 
-.bg-blur {
-    z-index:20;
-    background-image:url('/background_blur.jpg');
-    opacity:0;
+#cspio-headline {
+  font-family: "Pacifico";
+  font-weight: 400;
+  font-size: 48px;
+  color: #ffffff;
+  line-height: 1em;
+  margin-top: 0;
 }
 
-.wrapper {
-    z-index:2000;
-    padding: 0;
-    margin: 0;
+#cspio-content {
+  width: 100%;
+  padding: 30px;
+  margin: 0 auto;
+  display: none;
+  max-width: 600px;
+  background-color: #000000;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  background-color: transparent;
 }
 
-.wrapper header {
-    position:relative;
-    width:100%;
-    height:500px;
+#cspio-page {
+  background: -moz-radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0.3) 0%,
+    rgba(0, 0, 0, 0.2) 37%,
+    rgba(0, 0, 0, 0) 68%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background: -webkit-radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0.3) 0%,
+    rgba(0, 0, 0, 0.2) 37%,
+    rgba(0, 0, 0, 0) 68%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background: radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0.3) 0%,
+    rgba(0, 0, 0, 0.2) 37%,
+    rgba(0, 0, 0, 0) 68%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background-color: rgba(0, 0, 0, 0);
 }
 
-.slogan-holder {
-    position:relative;
-    width:100%;
-    height:350px;
+.cspio body {
+  background: -moz-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(0, 0, 0, 0) 7%,
+    rgba(0, 0, 0, 0) 80%,
+    rgba(0, 0, 0, 0.23) 100%
+  );
+  background: -webkit-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(0, 0, 0, 0) 7%,
+    rgba(0, 0, 0, 0) 80%,
+    rgba(0, 0, 0, 0.23) 100%
+  );
+  background: radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0) 7%,
+    rgba(0, 0, 0, 0) 80%,
+    rgba(0, 0, 0, 0.23) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#3b000000',GradientType=1 );
 }
 
-.nav-holder {
-    position:relative;
-    width:100%;
-    height:60px;
-}
-
-ul.nav {
-    width:640px;
-    padding: 20px 0 20px 0;
-    height:60px;
-    margin:0 auto;
-    border-top:2px solid #dededc;
-    list-style:none;
-    text-align:center;
-}
-
-ul.nav li {
-    display:inline-block;
-    width: 200px;
-}
-
-ul.nav li a {
-    text-decoration:none;
-    background: none;
-    border: none;
-    color: #fff;
-    font-size:16px;
-}
-
-ul.nav li a:link, 
-ul.nav li a:hover,
-ul.nav li a:visited,
-ul.nav li a:active {
-    background: none;
-    border: none;
-}
-
-ul.nav li a:hover {
-    text-decoration: underline;
-}
-
-.content {
-    background-color:#fff;
-}
-
-.disable-pointer-events {
-    pointer-events:none!important;
-}
-
-.pic {
-    height: 120px;
-    width: 120px;
-    border-radius: 100%;
-    margin-top: -60px;
-    border: 3px solid #fff;
-}
-
-.dark {
-    background-color: rgb(230,230,230);
-}
-
-/*
-.divider {
-    border-right: 1px solid rgb(150,150,150);
-    min-height: 250px;
-}
-*/
-
-.proj-img {
-    width: 100%;
-}
-
-.col-sm-6 {
-    padding-bottom: 20px;
-}
-
-.contact-btn {
-    width: 100%;
-    text-align: center;
-}
-
-.btn-twt a {
-    color: rgb(150,150,150);
-}
-
-.btn-fb a {
-    color: rgb(150,150,150);
-}
-
-.btn-gh a {
-    color: rgb(150,150,150);
-}
-
-.btn-gp a {
-    color: rgb(150,150,150);
-}
-
-.btn-fb a:hover {
-    color: rgb(59,89,152);
-}
-
-.btn-twt a:hover {
-    color: rgb(85,172,238);
-}
-
-.btn-gh a:hover {
-    color: #000000;
-}
-
-.btn-gp a:hover {
-    color: #dd4b39;
-}
-
-.contact-btn .fa {
-    font-size: 200px;
-}
-
-/* Sticky footer */
 html {
-    position: relative;
-    min-height: 100%;
+  height: 100%;
+  margin-top: 0 !important;
+  overflow: hidden;
+  background: #ffffff
+    url(https://images.unsplash.com/photo-1501914334045-d73f21057207?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2700&q=80)
+    no-repeat center bottom fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
 body {
-    margin-bottom: 100px;
+  text-align: center;
+  padding: 0 0px;
+  height: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
-#footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding-top: 12px;
-    height: 100px;
-    background-color: rgb(50,50,50);
-    color: white;
+
+#cspio-page {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  min-height: 100%;
+}
+
+.flexbox #cspio-page {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  padding: 10px;
+}
+
+#cspio-description,
+#cspio-logo,
+#cspio-socialprofiles,
+#cspio-privacy-policy-txt,
+#cspio-headline {
+  margin-bottom: 30px;
+}
+
+#cspio-socialprofiles a {
+  padding-right: 7px;
+  display: inline-block;
+}
+
+@media (max-width: 480px) {
+  #cspio-page {
+    padding-top: 10px;
+  }
+
+  .flexbox #cspio-page {
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+  }
 }
